@@ -174,6 +174,28 @@ specifier|final
 name|Metrics
 name|metrics
 decl_stmt|;
+DECL|field|onRelease
+specifier|private
+specifier|volatile
+name|OnRelease
+name|onRelease
+decl_stmt|;
+DECL|interface|OnRelease
+specifier|public
+specifier|static
+interface|interface
+name|OnRelease
+block|{
+DECL|method|release
+specifier|public
+name|void
+name|release
+parameter_list|(
+name|BlockCacheKey
+name|blockCacheKey
+parameter_list|)
+function_decl|;
+block|}
 DECL|method|BlockCache
 specifier|public
 name|BlockCache
@@ -396,6 +418,11 @@ name|releaseLocation
 argument_list|(
 name|notification
 operator|.
+name|getKey
+argument_list|()
+argument_list|,
+name|notification
+operator|.
 name|getValue
 argument_list|()
 argument_list|)
@@ -449,6 +476,9 @@ specifier|private
 name|void
 name|releaseLocation
 parameter_list|(
+name|BlockCacheKey
+name|blockCacheKey
+parameter_list|,
 name|BlockCacheLocation
 name|location
 parameter_list|)
@@ -503,6 +533,21 @@ operator|.
 name|decrementAndGet
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|onRelease
+operator|!=
+literal|null
+condition|)
+block|{
+name|onRelease
+operator|.
+name|release
+argument_list|(
+name|blockCacheKey
+argument_list|)
+expr_stmt|;
+block|}
 name|metrics
 operator|.
 name|blockCacheEviction
@@ -1087,6 +1132,21 @@ operator|.
 name|size
 argument_list|()
 return|;
+block|}
+DECL|method|setOnRelease
+name|void
+name|setOnRelease
+parameter_list|(
+name|OnRelease
+name|onRelease
+parameter_list|)
+block|{
+name|this
+operator|.
+name|onRelease
+operator|=
+name|onRelease
+expr_stmt|;
 block|}
 block|}
 end_class
