@@ -34,16 +34,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|Map
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Set
 import|;
 end_import
@@ -71,6 +61,40 @@ operator|.
 name|atomic
 operator|.
 name|AtomicInteger
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|store
+operator|.
+name|blockcache
+operator|.
+name|BlockCache
+operator|.
+name|OnRelease
+import|;
+end_import
+
+begin_import
+import|import
+name|com
+operator|.
+name|github
+operator|.
+name|benmanes
+operator|.
+name|caffeine
+operator|.
+name|cache
+operator|.
+name|Caffeine
 import|;
 end_import
 
@@ -105,24 +129,23 @@ decl_stmt|;
 DECL|field|names
 specifier|private
 specifier|final
-name|Map
+name|com
+operator|.
+name|github
+operator|.
+name|benmanes
+operator|.
+name|caffeine
+operator|.
+name|cache
+operator|.
+name|Cache
 argument_list|<
 name|String
 argument_list|,
 name|Integer
 argument_list|>
 name|names
-init|=
-operator|new
-name|ConcurrentHashMap
-argument_list|<>
-argument_list|(
-literal|8192
-argument_list|,
-literal|0.75f
-argument_list|,
-literal|512
-argument_list|)
 decl_stmt|;
 DECL|field|keysToRelease
 specifier|private
@@ -205,6 +228,21 @@ name|metrics
 operator|=
 name|metrics
 expr_stmt|;
+name|names
+operator|=
+name|Caffeine
+operator|.
+name|newBuilder
+argument_list|()
+operator|.
+name|maximumSize
+argument_list|(
+literal|50000
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
 if|if
 condition|(
 name|releaseBlocks
@@ -230,6 +268,35 @@ literal|0.75f
 argument_list|,
 literal|512
 argument_list|)
+argument_list|)
+expr_stmt|;
+name|blockCache
+operator|.
+name|setOnRelease
+argument_list|(
+operator|new
+name|OnRelease
+argument_list|()
+block|{
+annotation|@
+name|Override
+specifier|public
+name|void
+name|release
+parameter_list|(
+name|BlockCacheKey
+name|key
+parameter_list|)
+block|{
+name|keysToRelease
+operator|.
+name|remove
+argument_list|(
+name|key
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 argument_list|)
 expr_stmt|;
 block|}
@@ -258,7 +325,7 @@ parameter_list|)
 block|{
 name|names
 operator|.
-name|remove
+name|invalidate
 argument_list|(
 name|name
 argument_list|)
@@ -296,7 +363,7 @@ name|file
 init|=
 name|names
 operator|.
-name|get
+name|getIfPresent
 argument_list|(
 name|name
 argument_list|)
@@ -416,7 +483,7 @@ name|file
 init|=
 name|names
 operator|.
-name|get
+name|getIfPresent
 argument_list|(
 name|name
 argument_list|)
@@ -539,11 +606,18 @@ name|file
 init|=
 name|names
 operator|.
-name|remove
+name|getIfPresent
 argument_list|(
 name|source
 argument_list|)
 decl_stmt|;
+name|names
+operator|.
+name|invalidate
+argument_list|(
+name|source
+argument_list|)
+expr_stmt|;
 comment|// possible if the file is empty
 if|if
 condition|(
