@@ -693,6 +693,94 @@ operator|new
 name|MapperCache
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|)
+block|{
+name|Metrics
+name|metrics
+init|=
+operator|new
+name|Metrics
+argument_list|()
+decl_stmt|;
+name|int
+name|blockSize
+init|=
+literal|8192
+decl_stmt|;
+name|int
+name|slabSize
+init|=
+name|blockSize
+operator|*
+literal|32768
+decl_stmt|;
+name|long
+name|totalMemory
+init|=
+literal|2
+operator|*
+name|slabSize
+decl_stmt|;
+name|BlockCache
+name|blockCache
+init|=
+operator|new
+name|BlockCache
+argument_list|(
+name|metrics
+argument_list|,
+literal|true
+argument_list|,
+name|totalMemory
+argument_list|,
+name|slabSize
+argument_list|,
+name|blockSize
+argument_list|)
+decl_stmt|;
+name|BlockDirectoryCache
+name|cache
+init|=
+operator|new
+name|BlockDirectoryCache
+argument_list|(
+name|blockCache
+argument_list|,
+literal|"/collection1"
+argument_list|,
+name|metrics
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|directory
+operator|=
+operator|new
+name|BlockDirectory
+argument_list|(
+literal|"test"
+argument_list|,
+name|dir
+argument_list|,
+name|cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|directory
 operator|=
 operator|new
@@ -711,6 +799,7 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 name|random
 operator|=
 name|random
